fix saveDealPage null error

--- a/crm/index.html
+++ b/crm/index.html
@@ -4161,14 +4161,11 @@ async function showDealPage(id){
         const d={
         shop_id:currentDealShopId,
         contact_id:currentDealContactId,
-        amount:parseFloat(document.getElementById('deal-page-amount').value)||null,
-          close_date:document.getElementById('deal-page-close-date').value||null,
-          pipeline_id:document.getElementById('deal-page-pipeline').value,
-          stage:document.getElementById('deal-page-stage').value,
-          assigned_to:document.getElementById('deal-page-assigned').value||null,
-          coffee_shop_type:document.getElementById('deal-page-coffee-type').value||null,
-          monthly_revenue:document.getElementById('deal-page-revenue').value||null,
-          quantity:parseInt(document.getElementById('deal-page-quantity').value)||null
+        amount:parseFloat(document.getElementById('deal-page-amount')?.value)||null,
+          close_date:document.getElementById('deal-page-close-date')?.value||null,
+          pipeline_id:document.getElementById('deal-page-pipeline')?.value,
+          stage:document.getElementById('deal-page-stage')?.value,
+          assigned_to:document.getElementById('deal-page-assigned')?.value||null
         };
         const {error}=await db.from('deals').update(d).eq('id',currentDealId);
         if(error){
