fix: openDealModal null error - simplified to match modal

--- a/crm/index.html
+++ b/crm/index.html
@@ -4288,8 +4288,8 @@ async function showDealPage(id){
       if(deleteBtn)deleteBtn.style.display=id?'inline-flex':'none';
       document.querySelectorAll('#deal-modal .modal-tab').forEach(t=>t.classList.remove('active'));
       document.querySelectorAll('#deal-modal .modal-tab-content').forEach(t=>t.classList.remove('active'));
-      document.querySelector('#deal-modal .modal-tab[data-tab="timeline"]').classList.add('active');
-      document.getElementById('deal-tab-timeline').classList.add('active');
+      document.querySelector('#deal-modal .modal-tab[data-tab="details"]')?.classList.add('active');
+      document.getElementById('deal-tab-details')?.classList.add('active');
       
       if(id){
         const d=deals.find(x=>x.id===id);
@@ -4313,52 +4313,21 @@ async function showDealPage(id){
         updateDealStageOptions();
         document.getElementById('deal-stage').value=d.stage||'';
         document.getElementById('deal-assigned').value=d.assigned_to||'';
-        document.getElementById('deal-coffee-shop-type').value=d.coffee_shop_type||'';
-        document.getElementById('deal-monthly-revenue').value=d.monthly_revenue||'';
-        document.getElementById('deal-market-segment').value=d.market_segment||'';
-        document.getElementById('deal-quantity').value=d.quantity||'';
-        document.getElementById('deal-sales-outreach').value=d.sales_outreach||'';
-        document.getElementById('deal-how-heard').value=d.how_heard||'';
-        document.getElementById('deal-account-type').value=d.account_type||'';
-        document.getElementById('deal-sales-rep').value=d.sales_rep||'';
-        document.getElementById('deal-scheduled-launch').value=d.scheduled_launch_date||'';
-        document.getElementById('deal-actual-launch').value=d.actual_launch_date||'';
-        document.getElementById('deal-launch-rep').value=d.launch_rep||'';
-        document.getElementById('deal-waitlist-reason').value=d.waitlist_reason||'';
-        document.getElementById('deal-ob-sub-stage').value=d.ob_sub_stage||'';
-        document.getElementById('deal-merchant-company-id').value=d.merchant_company_id||'';
-        document.getElementById('deal-merchant-store-id').value=d.merchant_store_id||'';
-        document.getElementById('deal-joe-product').value=d.joe_product||'';
-        document.getElementById('deal-square-integration').value=d.square_integration===true?'true':(d.square_integration===false?'false':'');
-        document.getElementById('deal-revenue-tiering').value=d.revenue_tiering||'';
-        document.getElementById('deal-pgc-assigned').value=d.pgc_assigned||'';
-        document.getElementById('deal-notes').value=d.notes||'';
-        renderDealTimeline(id,d.contact_id);
-        renderDealTasks(id,d.contact_id);
-        renderDealEnrollments();
-        updateDealSentiment(id,d.contact_id);
-        hideDealEnrollForm();
       }else{
         document.getElementById('deal-modal-title').textContent='Add Deal';
         document.getElementById('deal-header-meta').innerHTML='';
-        ['deal-name','deal-amount','deal-close-date','deal-contact-search','deal-company-search','deal-notes','deal-coffee-shop-type','deal-how-heard','deal-waitlist-reason','deal-merchant-company-id','deal-merchant-store-id','deal-revenue-tiering','deal-quantity'].forEach(x=>{const el=document.getElementById(x);if(el)el.value='';});
-        ['deal-monthly-revenue','deal-market-segment','deal-sales-outreach','deal-account-type','deal-sales-rep','deal-ob-sub-stage','deal-joe-product','deal-square-integration'].forEach(x=>{const el=document.getElementById(x);if(el)el.value='';});
-        document.getElementById('deal-scheduled-launch').value='';
-        document.getElementById('deal-actual-launch').value='';
+        document.getElementById('deal-name').value='';
+        document.getElementById('deal-amount').value='';
+        document.getElementById('deal-close-date').value='';
         document.getElementById('deal-contact').value='';
+        document.getElementById('deal-contact-search').value='';
         document.getElementById('deal-company').value='';
+        document.getElementById('deal-company-search').value='';
         document.getElementById('deal-pipeline').value=currentPipelineId||pipelines[0]?.id||'';
         updateDealStageOptions();
         const firstStage=pipelineStages.find(s=>s.pipeline_id===(currentPipelineId||pipelines[0]?.id));
         document.getElementById('deal-stage').value=firstStage?.stage_key||'';
         document.getElementById('deal-assigned').value=currentUser?.email||'';
-        document.getElementById('deal-launch-rep').value='';
-        document.getElementById('deal-pgc-assigned').value='';
-        document.getElementById('deal-timeline').innerHTML='<div class="empty-state">Save deal first to see timeline</div>';
-        document.getElementById('deal-tasks-list').innerHTML='<div class="empty-state">Save deal first</div>';
-        document.getElementById('deal-enrollments').innerHTML='';
-        document.getElementById('deal-sentiment-badge').innerHTML='';
-        hideDealEnrollForm();
       }
       document.getElementById('deal-modal').classList.add('open');
     }
