--- a/crm/index.html
+++ b/crm/index.html
@@ -1883,7 +1883,10 @@ I noticed {{company}} and thought...
       const contactsBadge=document.getElementById('contacts-total-badge');
       if(contactsBadge)contactsBadge.textContent=contactsPagination.total.toLocaleString();
     }
-
+    async function loadActivities(){
+      const { data } = await db.from('activities').select('*').order('created_at',{ascending:false}).limit(500);
+      if(data) activities = data;
+    }
     async function loadMoreShops(){
       if(!shopsPagination.hasMore||shopsPagination.searching)return;
       const btn=document.getElementById('load-more-shops');
