--- a/crm/orders.html
+++ b/crm/orders.html
@@ -259,6 +259,35 @@
       color: var(--blue-500);
       text-decoration: underline;
     }
+
+    .purchase-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.25rem;
+      padding: 0.25rem 0.5rem;
+      background: var(--green-500);
+      color: white;
+      border-radius: 4px;
+      font-size: 0.7rem;
+      font-weight: 600;
+      text-decoration: none;
+      margin-left: 0.5rem;
+    }
+    .purchase-link:hover {
+      background: #16a34a;
+    }
+    .item-details {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+    .item-name {
+      font-weight: 500;
+    }
+    .item-variant {
+      font-size: 0.7rem;
+      color: var(--gray-400);
+    }
   </style>
 </head>
 <body>
@@ -490,8 +519,14 @@
           <h3>Items</h3>
           ${items.map(i => `
             <div class="detail-row">
-              <span class="detail-label">${i.qty}x ${i.name}</span>
-              <span class="detail-value">$${(i.price * i.qty).toFixed(2)}</span>
+              <div class="item-details">
+                <span class="item-name">${i.qty}x ${i.name}</span>
+                ${i.size || i.grind ? `<span class="item-variant">${[i.size, i.grind].filter(Boolean).join(' • ')}</span>` : ''}
+              </div>
+              <div style="display:flex;align-items:center;gap:0.5rem;">
+                <span class="detail-value">$${(i.price * i.qty).toFixed(2)}</span>
+                ${i.product_url ? `<a href="${i.product_url}" target="_blank" class="purchase-link">🛒 Purchase</a>` : ''}
+              </div>
             </div>
           `).join('')}
           <div class="detail-row" style="border-top:1px solid #e7e5e3;margin-top:0.5rem;padding-top:0.5rem">
@@ -540,8 +575,13 @@
       const shopUrl = currentOrder.shops?.website;
       
       if (currentOrder.status === 'paid') {
+        // Check if any items have product_url
+        const hasProductLinks = items.some(i => i.product_url);
         actions = `
-          ${shopUrl ? `<a href="${shopUrl}" target="_blank" class="btn btn-outline" style="text-decoration:none;">Open Shop ↗</a>` : ''}
+          ${hasProductLinks 
+            ? `<span style="font-size:0.8rem;color:var(--gray-500);margin-right:auto;">Use 🛒 links above to order each item</span>`
+            : (shopUrl ? `<a href="${shopUrl}" target="_blank" class="btn btn-outline" style="text-decoration:none;">Open Shop ↗</a>` : '')
+          }
           <button class="btn btn-outline" onclick="closeModal()">Close</button>
           <button class="btn btn-primary" onclick="showMarkOrderedForm()">Mark Ordered</button>
         `;
