--- a/marketplace/product/index.html
+++ b/marketplace/product/index.html
@@ -598,7 +598,7 @@
 
       try {
         // Load the product
-        const res = await fetch(`${SUPABASE_URL}/rest/v1/products?id=eq.${productId}&select=*,shops(id,name,slug,website,has_free_shipping,free_shipping_threshold)`, {
+        const res = await fetch(`${SUPABASE_URL}/rest/v1/products?id=eq.${productId}&select=*,shops(id,name,slug,website,has_free_shipping,free_shipping_threshold,state_code,city_slug)`, {
           headers: {
             'apikey': SUPABASE_KEY,
             'Authorization': `Bearer ${SUPABASE_KEY}`
@@ -670,7 +670,9 @@
           
           <div class="product-info">
             <div class="product-roaster">
-              <a href="/marketplace/?shop=${product.shop_id}">${product.shops?.name || 'Unknown Roaster'}</a>
+            <a href="/marketplace/?shop=${product.shop_id}">${product.shops?.name || 'Unknown Roaster'}</a>
+            ${product.shops?.state_code && product.shops?.city_slug && product.shops?.slug ? 
+              ` · <a href="/locations/${product.shops.state_code.toLowerCase()}/${product.shops.city_slug}/${product.shops.slug}/">Visit Shop</a>` : ''}
             </div>
             <h1 class="product-name">${product.name}</h1>
             
@@ -739,10 +741,11 @@
               <div>
                 <div class="roaster-name">${product.shops?.name || 'Unknown Roaster'}</div>
                 <a href="/marketplace/?shop=${product.shop_id}" class="roaster-link">View all products →</a>
+                ${product.shops?.state_code && product.shops?.city_slug && product.shops?.slug ? 
+                  `<a href="/locations/${product.shops.state_code.toLowerCase()}/${product.shops.city_slug}/${product.shops.slug}/" class="roaster-link">Visit Shop Page →</a>` : ''}
               </div>
             </div>
           </div>
-        </div>
       `;
     }
 
