Add social links to CRM deal page

--- a/crm/index.html
+++ b/crm/index.html
@@ -927,6 +927,12 @@
                           <input type="email" id="deal-page-company-email" placeholder="Email" style="padding:6px 8px">
                         </div>
                         <input type="url" id="deal-page-company-website" placeholder="Website" style="padding:6px 8px">
+                        <div id="deal-page-social-links" style="display:flex;gap:8px;margin:8px 0;flex-wrap:wrap">
+                          <a id="deal-page-instagram" href="#" target="_blank" style="display:none;padding:6px 10px;background:#E4405F;color:#fff;border-radius:4px;text-decoration:none;font-size:11px">📸 Instagram</a>
+                          <a id="deal-page-facebook" href="#" target="_blank" style="display:none;padding:6px 10px;background:#1877F2;color:#fff;border-radius:4px;text-decoration:none;font-size:11px">📘 Facebook</a>
+                          <a id="deal-page-twitter" href="#" target="_blank" style="display:none;padding:6px 10px;background:#000;color:#fff;border-radius:4px;text-decoration:none;font-size:11px">𝕏 Twitter</a>
+                          <a id="deal-page-tiktok" href="#" target="_blank" style="display:none;padding:6px 10px;background:#000;color:#fff;border-radius:4px;text-decoration:none;font-size:11px">🎵 TikTok</a>
+                        </div>
                         <button class="btn btn-small" onclick="saveDealCompanyInfo()" style="background:var(--joe-green);color:#fff">💾 Save</button>
                       </div>
                     </div>
@@ -5336,6 +5342,15 @@ async function showDealPage(id){
         document.getElementById('deal-page-company-phone').value=shop.phone||'';
         document.getElementById('deal-page-company-email').value=shop.email||'';
         document.getElementById('deal-page-company-website').value=shop.website||'';
+        // Social links
+        const igLink=document.getElementById('deal-page-instagram');
+        const fbLink=document.getElementById('deal-page-facebook');
+        const twLink=document.getElementById('deal-page-twitter');
+        const ttLink=document.getElementById('deal-page-tiktok');
+        if(shop.instagram_url){igLink.href=shop.instagram_url;igLink.style.display='inline-block';}else{igLink.style.display='none';}
+        if(shop.facebook_url){fbLink.href=shop.facebook_url;fbLink.style.display='inline-block';}else{fbLink.style.display='none';}
+        if(shop.twitter_url){twLink.href=shop.twitter_url;twLink.style.display='inline-block';}else{twLink.style.display='none';}
+        if(shop.tiktok_url){ttLink.href=shop.tiktok_url;ttLink.style.display='inline-block';}else{ttLink.style.display='none';}
         // Hide match section, show company details
         document.getElementById('deal-page-match-section').style.display='none';
         document.getElementById('deal-page-match-results').style.display='none';
