Clean up spotlight with logo and horizontal scroll

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -850,19 +850,21 @@
       </div>
     </div>
     <!-- Partner Spotlight -->
-    <div id="spotlightSection" style="display:none;margin-bottom:3rem;">
-      <div style="background:linear-gradient(135deg,#1c1917 0%,#292524 50%,#1c1917 100%);border-radius:20px;padding:2rem;color:#fff;position:relative;overflow:hidden;">
-        <div style="display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:1.5rem;flex-wrap:wrap;gap:1rem;">
-          <div>
-            <div style="display:inline-block;background:#f59e0b;color:#1c1917;padding:0.25rem 0.75rem;border-radius:20px;font-size:0.7rem;font-weight:700;margin-bottom:0.75rem;">⭐ PARTNER SPOTLIGHT</div>
-            <h2 style="font-size:1.75rem;margin-bottom:0.5rem;" id="spotlightName">Cxffeeblack</h2>
-            <p style="color:#a8a29e;font-size:0.9rem;max-width:500px;line-height:1.5;" id="spotlightDesc">Memphis-based coffee and culture brand. Black-owned, sourcing through an all-Black supply chain from Ethiopia, Kenya, Rwanda, and Colombia.</p>
+    <div id="spotlightSection" style="display:none;margin-bottom:2.5rem;">
+      <div style="background:#1c1917;border-radius:16px;padding:1.5rem;color:#fff;">
+        <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:1.25rem;">
+          <div style="display:flex;align-items:center;gap:1rem;">
+            <img id="spotlightLogo" src="https://cdn.shopify.com/s/files/1/0246/1427/3104/files/4_190a611c-0d58-438b-bcb8-52041e0b4539.jpg" style="width:48px;height:48px;border-radius:50%;object-fit:cover;border:2px solid #fff;">
+            <div>
+              <div style="font-size:0.65rem;color:#f59e0b;font-weight:600;text-transform:uppercase;letter-spacing:0.05em;">Partner Spotlight</div>
+              <div style="font-size:1.25rem;font-weight:700;" id="spotlightName">Cxffeeblack</div>
+            </div>
           </div>
-          <a id="spotlightLink" href="/locations/tn/memphis/cxffeeblack-memphis-546ded54/" style="background:#fff;color:#1c1917;padding:0.75rem 1.5rem;border-radius:10px;font-weight:600;font-size:0.875rem;text-decoration:none;display:flex;align-items:center;gap:0.5rem;transition:transform 0.2s;">
-            View All Products →
+          <a id="spotlightLink" href="#" style="background:#fff;color:#1c1917;padding:0.5rem 1rem;border-radius:8px;font-weight:600;font-size:0.8rem;text-decoration:none;white-space:nowrap;">
+            See all <span id="spotlightCount">15</span>+ →
           </a>
         </div>
-        <div id="spotlightProducts" style="display:flex;gap:1rem;overflow-x:auto;padding-bottom:0.5rem;scroll-snap-type:x mandatory;-webkit-overflow-scrolling:touch;"></div>
+        <div id="spotlightProducts" style="display:flex;gap:0.75rem;overflow-x:auto;padding-bottom:0.5rem;scroll-snap-type:x mandatory;-webkit-overflow-scrolling:touch;"></div>
       </div>
     </div>
 
@@ -1207,20 +1209,22 @@
       // Show/hide sections based on filters
       const hasFilters = filters.search || filters.type !== 'all' || filters.roast || filters.grind || filters.origin;
       
-      // Spotlight Section
+      /// Spotlight Section
+      const spotlightSection = document.getElementById('spotlightSection');
       if (featuredProducts.length > 0 && !hasFilters) {
-        document.getElementById('spotlightSection').style.display = 'block';
+        spotlightSection.style.display = 'block';
+        document.getElementById('spotlightCount').textContent = featuredProducts.length;
         document.getElementById('spotlightProducts').innerHTML = featuredProducts.map(p => `
-          <a href="/marketplace/product/?id=${p.id}" style="flex:0 0 200px;scroll-snap-align:start;background:#fff;border-radius:12px;overflow:hidden;color:#1c1917;text-decoration:none;transition:transform 0.2s;">
-            <img src="${p.image_url || ''}" style="width:100%;height:140px;object-fit:cover;background:#f5f5f4;">
-            <div style="padding:0.75rem;">
-              <div style="font-size:0.8rem;font-weight:600;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-bottom:0.25rem;">${p.name.split(':')[0].substring(0,30)}</div>
-              <div style="font-weight:700;color:#1c1917;">$${parseFloat(p.price).toFixed(2)}</div>
+          <a href="/marketplace/product/?id=${p.id}" style="flex:0 0 160px;scroll-snap-align:start;background:#292524;border-radius:10px;overflow:hidden;color:#fff;text-decoration:none;transition:transform 0.2s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">
+            <img src="${p.image_url || ''}" style="width:100%;height:120px;object-fit:cover;background:#44403c;">
+            <div style="padding:0.625rem;">
+              <div style="font-size:0.75rem;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-bottom:0.25rem;opacity:0.9;">${p.name.split(':')[0].substring(0,25)}</div>
+              <div style="font-weight:700;font-size:0.9rem;">$${parseFloat(p.price).toFixed(2)}</div>
             </div>
           </a>
         `).join('');
       } else {
-        document.getElementById('spotlightSection').style.display = 'none';
+        spotlightSection.style.display = 'none';
       }
       
       // Partner Products
