Add Shop to nav, default marketplace to All Products

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -958,7 +958,7 @@
     let products = [];
     let cart = JSON.parse(localStorage.getItem('joe_cart') || '[]');
     let filters = {
-      type: 'coffee',
+      type: 'all',
       search: '',
       roast: '',
       grind: '',
