--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@
       </a>
       <nav class="nav">
         <a href="/locations/">Find Coffee</a>
+        <a href="/marketplace/">Shop</a>
         <a href="/for-coffee-shops/">For Coffee Shops</a>
         <a href="/about/">About</a>
         <a href="https://get.joe.coffee" class="btn btn-primary">Get the App</a>
