--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -1218,7 +1218,7 @@
         document.getElementById('spotlightCount').textContent = featuredProducts.length;
         document.getElementById('spotlightLink').href = '/marketplace/?shop=' + FEATURED_SHOP_ID;
         document.getElementById('spotlightProducts').innerHTML = featuredProducts.map(p => `
-          <a href="/marketplace/product/?id=${p.id}" style="flex:0 0 160px;scroll-snap-align:start;background:#292524;border-radius:10px;overflow:hidden;color:#fff;text-decoration:none;transition:transform 0.2s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">
+          <a href="/marketplace/product/${p.slug || p.id}/" style="flex:0 0 160px;scroll-snap-align:start;background:#292524;border-radius:10px;overflow:hidden;color:#fff;text-decoration:none;transition:transform 0.2s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">
             <img src="${p.image_url || ''}" style="width:100%;height:120px;object-fit:cover;background:#44403c;">
             <div style="padding:0.625rem;">
               <div style="font-size:0.75rem;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-bottom:0.25rem;opacity:0.9;">${p.name.split(':')[0].substring(0,25)}</div>
@@ -1261,7 +1261,7 @@
       const canPurchase = p.in_stock && p.product_url;
       const isPartner = p.shops?.is_joe_partner;
       return `
-        <a href="/marketplace/product/?id=${p.id}" class="product-card">
+        <a href="/marketplace/product/${p.slug || p.id}/" class="product-card">
           <div class="product-image-wrapper">
             ${p.image_url 
               ? `<img src="${p.image_url}" alt="${p.name}" class="product-image">`
