--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -1217,7 +1217,7 @@
       if (featuredProducts.length > 0 && !hasFilters && !shopFilter) {
         spotlightSection.style.display = 'block';
         document.getElementById('spotlightCount').textContent = featuredProducts.length;
-        document.getElementById('spotlightLink').href = '/marketplace/?shop=' + FEATURED_SHOP_ID;
+        document.getElementById('spotlightLink').href = '/locations/tn/memphis/cxffeeblack-memphis-546ded54/products/';
         document.getElementById('spotlightProducts').innerHTML = featuredProducts.map(p => `
           <a href="/marketplace/product/${p.slug || p.id}/" style="flex:0 0 160px;scroll-snap-align:start;background:#292524;border-radius:10px;overflow:hidden;color:#fff;text-decoration:none;transition:transform 0.2s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">
             <img src="${p.image_url || ''}" style="width:100%;height:120px;object-fit:cover;background:#44403c;">
