Fix marketplace header to match homepage

--- a/marketplace/success.html
+++ b/marketplace/success.html
@@ -118,7 +118,7 @@
 <body>
   <header class="header">
     <div class="header-inner">
-      <a href="/" class="logo">☕ joe</a>
+      <a href="/" class="logo"><img src="/images/logo.png" alt="joe"></a>
     </div>
   </header>
 
