--- a/marketplace/product/index.html
+++ b/marketplace/product/index.html
@@ -517,7 +517,7 @@
 <body>
   <header class="header">
     <div class="header-inner">
-      <a href="/" class="logo">☕ joe</a>
+      <a href="/" class="logo"><img src="/images/logo.png" alt="joe"></a>
       <nav class="nav">
         <a href="/locations/">Find Coffee</a>
         <a href="/marketplace/">Marketplace</a>
