--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -803,10 +803,10 @@
 <body>
   <header class="header">
     <div class="header-inner">
-      <a href="/" class="logo"><img src="/images/logo.png" alt="joe" style="height:40px"></a>
+      <a href="/" class="logo">☕ joe</a>
       <nav class="nav">
         <a href="/locations/">Find Coffee</a>
-        <a href="/marketplace/">Shop</a><a href="/for-coffee-shops/">For Coffee Shops</a><a href="/about/">About</a>
+        <a href="/marketplace/">Shop</a>
         <button class="cart-btn" onclick="toggleCart()">
           🛒 Cart <span class="cart-count" id="cartCount">0</span>
         </button>
