Handle API errors gracefully

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -985,7 +985,7 @@
             'Authorization': `Bearer ${SUPABASE_KEY}`
           }
         });
-        products = await res.json();
+        products = await res.json(); if (!Array.isArray(products)) { console.error("API error:", products); products = []; }
         renderFilters();
         renderProducts();
       } catch (err) {
