--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -979,7 +979,7 @@
     // Fetch products
     async function loadProducts() {
       try {
-        const res = await fetch(`${SUPABASE_URL}/rest/v1/products?is_active=eq.true&select=*,shops(id,name,slug,has_free_shipping,free_shipping_threshold,is_joe_partner,description)&order=created_at.desc`, {
+        const res = await fetch(`${SUPABASE_URL}/rest/v1/products?is_active=eq.true&select=*,shops!products_shop_id_fkey(id,name,slug,has_free_shipping,free_shipping_threshold,is_joe_partner,description)&order=created_at.desc`, {
           headers: { 
             'apikey': SUPABASE_KEY,
             'Authorization': `Bearer ${SUPABASE_KEY}`
