Default to Coffee filter, add spacing

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -148,6 +148,7 @@
       margin-top: 0.75rem;
       padding-top: 0.75rem;
       border-top: 1px solid var(--gray-100);
+      margin-bottom: 1.5rem;
     }
     .sub-filter-label {
       font-size: 0.75rem;
@@ -519,11 +520,11 @@
         </svg>
       </div>
       <div class="filters">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="coffee">☕ Coffee</button>
+        <button class="filter-btn" data-filter="all">All</button>
+        <button class="filter-btn active" data-filter="coffee">☕ Coffee</button>
         <button class="filter-btn" data-filter="merch">👕 Merch</button>
       </div>
-      <div class="sub-filters" id="coffeeFilters" style="display:none;">
+      <div class="sub-filters" id="coffeeFilters" style="display:flex;">
         <span class="sub-filter-label">Roast:</span>
         <button class="sub-filter-btn" data-roast="light">Light</button>
         <button class="sub-filter-btn" data-roast="medium">Medium</button>
@@ -615,7 +616,7 @@
     const FEATURED_SHOP_ID = '4a2729c3-5be1-4d1e-9b0d-985ac242f0e3';
     
     let cart = JSON.parse(localStorage.getItem('joe_cart') || '[]');
-    let currentFilter = 'all';
+    let currentFilter = 'coffee';
     let currentRoast = null;
     let currentGrind = null;
     let currentMerch = null;
