filter buttons black with white text

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -171,8 +171,9 @@
     }
     .sub-filter-btn:hover { border-color: var(--gray-400); }
     .sub-filter-btn.active {
-      background: var(--gray-100);
-      border-color: var(--gray-400);
+      background: var(--black);
+      color: var(--white);
+      border-color: var(--black);
     }
 
     /* Partner Spotlight */
