--- a/marketplace/checkout/index.html
+++ b/marketplace/checkout/index.html
@@ -114,7 +114,7 @@
       let subtotal = 0;
       
       container.innerHTML = cart.map(item => {
-        const itemTotal = item.price * item.qty;
+        const itemTotal = item.price * item.quantity;
         subtotal += itemTotal;
         const details = [item.size, item.grind, item.roaster].filter(Boolean).join(' • ');
         return `
@@ -123,7 +123,7 @@
             <div class="cart-item-info">
               <div class="cart-item-name">${item.name}</div>
               ${details ? `<div class="cart-item-details">${details}</div>` : ''}
-              <div class="cart-item-details">Qty: ${item.qty}</div>
+              <div class="cart-item-details">Qty: ${item.quantity}</div>
             </div>
             <div class="cart-item-price">$${itemTotal.toFixed(2)}</div>
           </div>
