Add Owner Admin link to CRM sidebar

--- a/crm/index.html
+++ b/crm/index.html
@@ -400,6 +400,7 @@
         <div class="nav-item" data-page="emails"><span>✉️</span> <span>Email Templates</span></div>
         <div class="nav-item" data-page="team"><span>👥</span> <span>Team</span></div>
         <div class="nav-item" data-page="integrations"><span>🔌</span> <span>Integrations</span></div>
+        <a href="/owner/admin.html" target="_blank" class="nav-item" style="text-decoration:none"><span>👑</span> <span>Owner Admin</span></a>
       </div>
       <div class="sidebar-user">
         <div class="user-info">
