--- a/index.html
+++ b/index.html
@@ -833,6 +833,8 @@
           <ul>
             <li><a href="/about/">About</a></li>
             <li><a href="/blog/">Blog</a></li>
+            <li><a href="/media/">Media</a></li>
+            <li><a href="/contact/">Contact</a></li>
             <li><a href="/terms/">Terms</a></li>
             <li><a href="/privacy/">Privacy</a></li>
           </ul>
@@ -859,7 +861,7 @@
       </div>
       
       <div class="footer-bottom">
-        <span>© 2026 joe Coffee. All rights reserved.</span>
+        <span>© 2026 Joe Coffee. All rights reserved.</span>
         <span>
           Crafted with 
           <svg fill="currentColor" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
