Fix email display - prevent Cloudflare obfuscation

--- a/media/index.html
+++ b/media/index.html
@@ -321,7 +321,7 @@
         <div class="press-contact">
             <h2>📬 Press Inquiries</h2>
             <p>For media requests, interviews, or press materials, contact us at:</p>
-            <a href="/cdn-cgi/l/email-protection#5d2d2f382e2e1d373238733e323b3b3838"><span class="__cf_email__" data-cfemail="b9c9cbdccacaf9d3d6dc97dad6dfdfdcdc">[email&#160;protected]</span></a>
+            <a href="mailto:press&#64;joe.coffee" style="color: #1a1a1a; font-weight: 600; font-size: 1.25rem; text-decoration: underline;">press&#64;joe.coffee</a>
         </div>
         
         <!-- Press Coverage -->
