Fix media page: add footer, fix email link

--- a/media/index.html
+++ b/media/index.html
@@ -321,7 +321,7 @@
         <div class="press-contact">
             <h2>📬 Press Inquiries</h2>
             <p>For media requests, interviews, or press materials, contact us at:</p>
-            <a href="/cdn-cgi/l/email-protection#7d0d0f180e0e5b5e4b4946171218531e121b1b1818" style="color: #1a1a1a; font-weight: 600; font-size: 1.25rem; text-decoration: underline;">press&#64;joe.coffee</a>
+            <a href="mailto:press@joe.coffee" style="color: #1a1a1a; font-weight: 600; font-size: 1.25rem; text-decoration: underline;">press@joe.coffee</a>
         </div>
         
         <!-- Press Coverage -->
