--- a/index.html
+++ b/index.html
@@ -844,18 +844,18 @@
       <div class="footer-cities">
         <h4>Coffee Shops by City</h4>
         <div class="footer-cities-grid">
-          <a href="/locations/wa/seattle/">Seattle</a>
-          <a href="/locations/il/chicago/">Chicago</a>
-          <a href="/locations/or/portland/">Portland</a>
-          <a href="/locations/ca/los-angeles/">Los Angeles</a>
           <a href="/locations/ny/new-york/">New York</a>
+          <a href="/locations/ca/los-angeles/">Los Angeles</a>
+          <a href="/locations/il/chicago/">Chicago</a>
           <a href="/locations/ca/san-francisco/">San Francisco</a>
-          <a href="/locations/co/denver/">Denver</a>
-          <a href="/locations/tx/austin/">Austin</a>
-          <a href="/locations/fl/miami/">Miami</a>
-          <a href="/locations/ma/boston/">Boston</a>
           <a href="/locations/pa/philadelphia/">Philadelphia</a>
-          <a href="/locations/ga/atlanta/">Atlanta</a>
+          <a href="/locations/ca/san-diego/">San Diego</a>
+          <a href="/locations/ma/boston/">Boston</a>
+          <a href="/locations/wa/seattle/">Seattle</a>
+          <a href="/locations/co/denver/">Denver</a>
+          <a href="/locations/dc/washington/">Washington DC</a>
+          <a href="/locations/tn/nashville/">Nashville</a>
+          <a href="/locations/or/portland/">Portland</a>
         </div>
         <a href="/locations/" class="view-all">View All Locations →</a>
       </div>
