Add Lucide icons, fix button icons

--- a/crm-2/index.html
+++ b/crm-2/index.html
@@ -14,6 +14,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
+  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
 </head>
 <body>
   <!-- Auth Screen -->
@@ -117,7 +118,7 @@
             <input type="text" id="global-search" placeholder="Search... (⌘K)">
           </div>
           <button class="btn btn-primary" id="main-action-btn">
-            <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 4v16m-8-8h16"/></svg>
+            <i data-lucide="plus"></i>
             New Deal
           </button>
         </div>
