hamburger memu gray not white

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1849,7 +1849,7 @@
         }
         
         nav:not(.scrolled) .mobile-menu-btn span {
-            background: var(--white);
+            background: var(--gray-900);
         }
         
         .mobile-menu-btn.active span {
