--- a/index.html
+++ b/index.html
@@ -690,7 +690,15 @@
         }
       }
     </style>
-  </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NLCJFKGXB5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-NLCJFKGXB5');
+</script>
+</head>
   <body>
     <header class="header" id="header">
       <div class="header-inner">
