--- a/crm-2/index.html
+++ b/crm-2/index.html
@@ -171,7 +171,7 @@
             <select id="deals-owner-filter"><option value="">All Owners</option></select>
             <input type="text" id="deals-search" placeholder="Search deals...">
           </div>
-          <div class="data-table" id="deals-table"></div>
+          <div id="deals-list"></div>
         </div>
 
         <!-- Companies Page -->
