--- a/crm-2/index.html
+++ b/crm-2/index.html
@@ -315,5 +315,6 @@
   <script src="js/modules/sequences.js"></script>
   <script src="js/modules/settings.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/modules/email-activity.js"></script>
 </body>
 </html>
