--- a/crm-2/index.html
+++ b/crm-2/index.html
@@ -117,6 +117,13 @@
             <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
             <input type="text" id="global-search" placeholder="Search... (⌘K)">
           </div>
+          <button class="header-icon-btn" title="Notifications">
+            <i data-lucide="bell"></i>
+            <span class="notification-dot hidden"></span>
+          </button>
+          <button class="header-icon-btn" onclick="Router.navigate('settings')" title="Settings">
+            <i data-lucide="settings"></i>
+          </button>
           <button class="btn btn-primary" id="main-action-btn">
             <i data-lucide="plus"></i>
             New Deal
